--- a/SpringBootRestAPI/pom.xml
+++ b/SpringBootRestAPI/pom.xml
@@ -68,6 +68,13 @@
 			<groupId>org.eclipse.angus</groupId>
 			<artifactId>angus-mail</artifactId>
 		</dependency>
+
+		<dependency>
+  			<groupId>org.json</groupId>
+  			<artifactId>json</artifactId>
+ 		    <version>20240303</version> 
+		</dependency>
+
 	</dependencies>
 
 	<build>
